# bpmnos-engine

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  IMPLEMENTATION_NOTES.md  LICENSE  README.md  leak.supp  single-header.cmake
app/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/src/: Engine.cpp  Engine.h  Token.cpp  Token.h
execution/: CMakeLists.txt
execution/controller/: CMakeLists.txt
execution/controller/src/: CMakeLists.txt  CPController.cpp  CPController.h  CPModel.cpp  CPSeed.cpp  CPSeed.h  CPSolution.cpp  CachedCandidates.cpp  CachedCandidates.h  Candidates.h  Controller.cpp  Controller.h  Decision.cpp  Decision.h  DecisionStore.cpp  DecisionStore.h  Evaluation.h  Evaluator.cpp  Evaluator.h  FlattenedGraph.cpp  FlattenedGraph.h  GreedyCandidateDispatcher.h  GreedyController.cpp  GreedyController.h  GreedyDispatcher.cpp  GreedyDispatcher.h  GuidedController.cpp  GuidedController.h  PrecedenceGraph.cpp  PrecedenceGraph.h  SeededController.cpp  SeededController.h  SeededGreedyController.cpp  SeededGreedyController.h
execution/engine/: CMakeLists.txt  Token_life-cycle.drawio
execution/engine/src/: CMakeLists.txt  ConditionalEventObserver.cpp  ConditionalEventObserver.h  DataUpdate.h  Decision.cpp  Decision.h  DecisionRequest.h  Engine.cpp  Engine.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  Listener.h  Mediator.h  Message.cpp  Message.h  Notifier.cpp  Notifier.h  Observable.h  Observer.h  ReadyHandler.cpp  ReadyHandler.h  ScenarioUpdater.cpp  ScenarioUpdater.h  SequentialPerformerUpdate.h  StateMachine.cpp  StateMachine.h  SystemState.cpp  SystemState.h  TaskCompletionHandler.cpp  TaskCompletionHandler.h  Token.cpp  Token.h
execution/listener/: CMakeLists.txt
execution/listener/src/: CMakeLists.txt  Listener.cpp  Recorder.cpp  Recorder.h
execution/model/: CMakeLists.txt
execution/model/src/: CMakeLists.txt  CPModel.cpp  CPModel.h  CPSolution.cpp  CPSolution.h  FlattenedGraph.cpp  FlattenedGraph.h
execution/observer/: CMakeLists.txt
execution/observer/src/: CMakeLists.txt  CPSolutionObserver.cpp  CPSolutionObserver.h  DynamicDataHandler.cpp  DynamicDataHandler.h  OutcomeSentinel.cpp  OutcomeSentinel.h  Recorder.cpp  Recorder.h
execution/utility/: CMakeLists.txt
execution/utility/src/: CMakeLists.txt  VectorRegistry.cpp  VectorRegistry.h  auto_associative_list.h  auto_associative_schedule.h  auto_list.h  auto_schedule.h  auto_set.h  erase.h  expired.h
model/: CMakeLists.txt
model/bpmnos/: CMakeLists.txt
model/bpmnos/src/: CMakeLists.txt  DecisionTask.cpp  DecisionTask.h  LookupTable.cpp  LookupTable.h  Model.cpp  Model.h  SequentialAdHocSubProcess.cpp  SequentialAdHocSubProcess.h
model/bpmnos/xsd/: BPMNOS.xsd
model/data/: CMakeLists.txt
model/data/src/: CMakeLists.txt  DataProvider.cpp  DataProvider.h  DynamicDataProvider.cpp  DynamicDataProvider.h  DynamicScenario.cpp  DynamicScenario.h  ExpectedValueDataProvider.cpp  ExpectedValueDataProvider.h  ExpectedValueScenario.cpp  ExpectedValueScenario.h  Input.h  InstanceData.cpp  InstanceData.h  LegacyScenario.cpp  LegacyScenario.h  Scenario.cpp  Scenario.h  StaticDataProvider.cpp  StaticDataProvider.h  StaticInstanceData.cpp  StaticInstanceData.h  StaticScenario.cpp  StaticScenario.h  StochasticDataProvider.cpp  StochasticDataProvider.h  StochasticScenario.cpp  StochasticScenario.h
model/operator/: CMakeLists.txt
model/operator/src/: CMakeLists.txt  Expression.cpp  Expression.h  Lookup.cpp  Lookup.h  LookupTable.h  Set.cpp  Set.h  Unset.cpp  Unset.h
model/parser/: CMakeLists.txt
model/parser/src/: Attribute.cpp  Attribute.h  CMakeLists.txt  DecisionTask.cpp  DecisionTask.h  Gatekeeper.cpp  JobShop.cpp  JobShop.h  MessageTaskSubstitution.cpp  MessageTaskSubstitution.h  Model.cpp  Model.h  Operator.cpp  Operator.h  Parameter.cpp  Parameter.h  ReleaseActivity.cpp  ReleaseActivity.h  RequestActivity.cpp  RequestActivity.h  ResourceActivity.cpp  ResourceActivity.h  Restriction.cpp  Restriction.h  Sequencer.cpp  Sequencer.h  SequentialAdHocSubProcess.cpp  SequentialAdHocSubProcess.h  SetOperator.cpp  SetOperator.h  Status.cpp  Status.h  UnsetOperator.cpp  UnsetOperator.h
model/parser/xsd/: BPMNOS.xsd
model/utility/: CMakeLists.txt
model/utility/src/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  CollectionRegistry.cpp  CollectionRegistry.h  ExpectedValueFactory.cpp  ExpectedValueFactory.h  Keywords.h  Number.cpp  Number.h  Numeric.h  RandomDistributionFactory.cpp  RandomDistributionFactory.h  StringRegistry.cpp  StringRegistry.h  Value.h  VectorRegistry.h  encode_collection.h  encode_quoted_strings.h  getDelimiter.h  string_utility.h  tuple_map.h  vector_map.h
parser/: CMakeLists.txt
parser/src/: CMakeLists.txt  Gatekeeper.h  JobShop.cpp  JobShop.h  MessageTaskSubstitution.cpp  MessageTaskSubstitution.h  Model.cpp  Model.h  Node.cpp  Node.h  ReleaseActivity.cpp  ReleaseActivity.h  RequestActivity.cpp  ResourceActivity.cpp  ResourceActivity.h  SequenceFlow.cpp  SequenceFlow.h  Status.cpp  Status.h
parser/xsd/: BPMNOS.xsd
tests/: CMakeLists.txt  debug.h  main.cpp  replace.sh
tests/DynamicData/: test.h
tests/Execution/: Executable_process.bpmn  test.h
tests/Expression/: anotherLinearExpression.bpmn  genericExpression.bpmn  linearExpression.bpmn  test.h
tests/ParseElements/: EmptyCustomActivity.bpmn  RequestActivity.bpmn  ResourceActivity.bpmn  SimplifiedResourceActivity.bpmn  test.h
tests/StaticData/: Executable_process.bpmn  test.h
tests/candidates/: test.h  util.h
tests/candidates/rebuild/: test.h
tests/candidates/resume/: test.h
tests/candidates/scenario/: test.h
tests/cp/: test.h
tests/cp/adhocsubprocess/: test.h
tests/cp/collection/: test.h
tests/cp/data/: test.h
tests/cp/decisiontask/: test.h
tests/cp/eventbasedgateway/: test.h
tests/cp/eventsubprocess/: test.h
tests/cp/exclusivegateway/: test.h
tests/cp/expression/: test.h
tests/cpcontroller/: test.h
tests/cpmodel/: test.h
tests/cpsolver/: test.h
tests/systemstate/: test.h
(+685 files in other folders)
